hphp/hack/test/typecheck/global_const8.php
<?hh // partial

const X = $x->foo;
